fix(project-menu): z-index and overlap

--- a/recoco/frontend/src/css/DSFR/custom-dsfr.scss
+++ b/recoco/frontend/src/css/DSFR/custom-dsfr.scss
@@ -929,6 +929,10 @@ form > p {
   z-index: 11 !important;
 }
 
+.z-1 {
+  z-index: 1 !important;
+}
+
 /* ¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯ *\
   resize text elements
 \* ˍˍˍˍˍˍˍˍˍˍˍˍˍˍˍˍˍˍ */
